samples/_failures_safe/1761475076_218fbb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_645c373a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_645c373a.c:179:20: error: expected ‘;’ at end of input
  179 |         token_count
      |                    ^
      |                    ;
./samples/SAFE/__tmp_645c373a.c:179:9: error: expected declaration or statement at end of input
  179 |         token_count
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_645c373a.c:179:9: error: expected declaration or statement at end of input
